- Fixed kernel version detection in FreeBSD 10.x which affected the Network
  graph.
	(thanks to Sergey Andreyev, sandreyev AT gmail.com)
- Fixed missing HTML tag terminations in several modules.
- Fixed the color in the footer URLs in Multihost mode.
- Fixed a '403 Forbidden' message in Apache generated by a misconfiguration in
  'monitorix-apache.conf'. [#69]


3.6.0  - 20-Aug-2014
====================
- Added a complete statistical Libvirt (libvirt) graph.
- Added a complete processes statistics (process) graph.
- Added Upstart job. [#46]
- Added more verbosity during the startup.
- Added support to include username and password in the 'url_prefix' option of
  the 'emailreports' module.
	(suggested by V1ru535, admin AT mynet.fr)
- Optimized the 'serv' graph to not overload servers with big log files.
- Added support to include Piwik tracking code.
	(suggested by V1ru535, admin AT mynet.fr)
- Added support for relay-only MTA (for example Nullmailer) in 'emailreports'.
  [#49]
- Added the new option 'ip_default_table' to define in which table Monitorix
  will put all iptables rules for network traffic accounting monitoring.
	(suggested by Russell Morris, rmorris AT rkmorris.us)
- Added SPF statistics in the 'mail' graph.
- Added support for newest NVidia driver 340.24. [#54]
- Added the new 'url_prefix_proxy' option to bypass the URL building in the CGI.
  Usefull when Monitorix is used behind a reverse proxy. [#58]
- Added a 'Makefile' to provide more flexibility for users and packagers. [#62]
- Improved in all graphs the 'limit' and 'rigid' functionality and reduced a lot
  of redundant code.
- Changed all DST from COUNTER to GAUGE in 'net' module to avoid unexpected huge
  peaks.
- Added a check to detect inconsistencies between enabled graphs and defined
  graphs during initialization.
- Fixed regexp that prevented collecting LOADPCT and ITEMP values in 'apcupsd'
  module.
	(thanks to Patrick Fallberg, patrick AT fallberg.net)