@@ -21,6 +21,8 @@
 - Fixed the color in the footer URLs in Multihost mode.
 - Fixed a '403 Forbidden' message in Apache generated by a misconfiguration in
   'monitorix-apache.conf'. [#69]
+- Fixed a bug in 'netstat' module that prevented, in some cases, counting
+  correctly the opened connections either in IPv4 and IPv6. [#66]
 
 
 3.6.0  - 20-Aug-2014
